--- a/experience.html
+++ b/experience.html
@@ -8,6 +8,12 @@
     <title>Document</title>
 </head>
 <body>
+    <div class=main-nav>
+        <ul class=nav>
+    <li class=name> Arbaz Tarar</li>
+        <li><a href=index.html> Home </a></li>
+    <li><a href=experience.html>Experience</a></li>
+        </ul> </div>
    <header> <h1>Here is my experience</h1>
 <h3><a href="index.html">Return</a></h3>
 </header>
