--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <li class=name> Arbaz Tarar</li>
         <li><a href=index.html> Home </a></li>
     <li><a href=experience.html>Experience</a></li>
-    <li><a href=contact.html>Contact</a></li>
         </ul> </div>
         <header>
         <img src= "images/arbaz-profile-pic.jpg" alt ="profile picture" class= profile-image> 
@@ -50,9 +49,9 @@
    <footer>
 
 <ul>
-<li><a href=https://www.twitter.com/ class="social twitter"> twitter </a></li>
-<li><a href=https://www.linkedin.com/ class="social linkedin">linkedin</a></li>
-<li><a href=https://www.github.com class="social github">github</a></li>
+<li><a href=https://twitter.com/arbaz785 class="social twitter"> twitter </a></li>
+<li><a href=https://www.linkedin.com/in/arbaztarar/ class="social linkedin">linkedin</a></li>
+<li><a href=https://github.com/atarar/Final-Treehouse-Profile-Page- class="social github">github</a></li>
 </ul>
 
 <p class=copyright>
